# tldr-bot

./: Cargo.toml  Dockerfile  application.yaml  docker-compose.prod.yml  docker-compose.yml  renovate.json
.github/workflows/: build-deploy.yml  cleanup-old-images.yml  pr-build.yaml
.sqlx/: query-2a8ce1ea0399c4b73eb403f4208c8e4c1ef8487cdf17ffb5bff03747389a3030.json  query-52963ea2a219c5da37914e6e6c11fdff5ae139410421a6296ca2fab3d5574c09.json  query-60d9061158251e4c1b8264f919adc389e7dbb7967dcbb0fca0dd56c8d6936399.json  query-b0726697f8dad7c28c9954a1a0fea356539a0d76804a5fa0af9e9e471733814b.json  query-bab3668f38349977c3e5ffee902a1c6a726928257002757615abd54a0e851b76.json  query-ddd76ec7d4946262ad9e2bee8d4f20693498cd7af880fd394b2132e25af34bf8.json  query-eb5fcf63712f6425d301f2307f2a7be6f5dcd32a4218eb29c322448eab16366d.json  query-ed9e648a6a9edb4f7a8116bf147f1516893a192b76700c19010d68e70370b806.json  query-edb5fce29f68cebac0e61a0af3edecd5691fd5c9e71ce7c467e6cb418c8503a4.json  query-fd61789aa42b29dbcec6fa7b6de14e16c4fe2ac76470fd427e8576014c173138.json
kubernetes/: deployment.yaml  namespace.yaml  secret.yaml
migrations/: 0001_init.sql  0002_add_role_column.sql  0003_add_channel_id_column.sql
src/: main.rs
