[package]
name = "summarise"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = "0.7.7"
ollama-rs = "0.2.1"
serde = "1.0.210"
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "tls-rustls", "macros", "chrono"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
twilight-cache-inmemory = "0.15.4"
twilight-gateway = "0.15.4"
twilight-http = "0.15.4"
twilight-model = "0.15.4"
vesper = "0.13.0"
openai-api-rs = "5.0.10"
chrono = "0.4.38"
twilight-util = { version = "0.15.4", features = ["builder"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.22.0"
