[package]
name = "tldr-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
serde = "1.0.217"
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "tls-rustls", "macros", "chrono"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
twilight-cache-inmemory = "0.16.0"
twilight-gateway = "0.16.0"
twilight-http = "0.16.0"
twilight-model = "0.16.0"
vesper = "0.13.0"
openai-api-rs = "5.2.5"
chrono = "0.4.39"
twilight-util = { version = "0.16.0", features = ["builder"] }
phf = { version = "0.12.0", features = ["macros"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.25.0"

[patch.crates-io]
vesper = { git = "https://github.com/AlvaroMS25/vesper.git", branch = "next" }
